Create a new proxy implementation